# pqi-mapping-copilot

./: .gitignore  README.md  constraints.txt  pyproject.toml  streamlit_app.py
.github/workflows/: ci.yml
container-closure-hapi-r5/: README.md  compose.yaml  load_bundle.sh  streamlit_app.py
container-closure-hapi-r5/fhir/: container-closure-update.collection.json  container-closure-update.transaction.json  container-closure.collection.json  container-closure.transaction.json
container-closure-hapi-r5/ig/: BASELINE.md
container-closure-hapi-r5/source/: pattern_input.txt  sap_container_closure_extract.csv
data/examples/: approval_config.yaml  approval_overrides.yaml  lims_results.csv  mes_steps.json  qms_deviations.xml  sap_batch.csv
data/synthetic/: batch_record.csv  lims_results.csv  plm_spec.xml  product_master.csv  qms_deviation.json
docs/: architecture.md
ig/: pqi-package.tgz
pqi_copilot/: __init__.py  __main__.py  cli.py  common.py  models.py  pipeline.py
pqi_copilot/classify/: domain_classifier.py  resource_classifier.py
pqi_copilot/generate/: bundle.py
pqi_copilot/governance/: store.py
pqi_copilot/ig/: ig_loader.py
pqi_copilot/ingest/: normalize.py
pqi_copilot/profiler/: stats.py
pqi_copilot/propose/: decisions.py  hard_rules.py  mapping.py  (+2 more)
tests/: __init__.py  common.py  test_copilot_artifacts_root.py  test_copilot_determinism.py  test_copilot_golden.py  test_copilot_ig_loader.py  test_copilot_mapping_quality.py  test_copilot_overrides.py  test_copilot_schema.py  test_determinism.py  test_golden_bundle.py  test_mapping_stability.py
(+79 files in other folders)
