[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pqi-mapping-copilot"
version = "0.1.0"
description = "Local-first PQI Mapping Copilot MVP"
requires-python = ">=3.11"
dependencies = [
  "typer>=0.12",
  "pydantic>=2.7",
  "pandas>=2.2",
  "python-dateutil>=2.9",
  "rapidfuzz>=3.9",
  "jinja2>=3.1"
]

[project.optional-dependencies]
dev = ["pytest>=8.2"]

[project.scripts]
pqi-copilot = "pqi_copilot.cli:main"

[tool.setuptools.packages.find]
include = ["pqi_copilot*"]

[tool.setuptools.package-data]
"*" = ["**/*.md", "**/*.html"]
